--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <p>Coming soon...</p>
-    <a href=./about/contact-us.html>Contact Us</a>
+    <p><a href=./about/contact-us.html>Contact Us</a></p>
   </body>
 </html>
